(in-progres for #7, EXPERIMENTAL)  * Added new basic builder class framework.  * Added parsing, but untested PHP5PeerBuilder  * Modified buil-propel.xml and build.xml to include a 'new-om' target for testing purposes.
git-svn-id: http://propel.mirror.svn.symfony-project.com/trunk@8 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/build.xml
+++ b/generator/build.xml
@@ -101,6 +101,10 @@
 	<phing phingfile="build-propel.xml" target="om"/>
 </target>
 
+<target name="new-om" depends="configure">
+	<phing phingfile="build-propel.xml" target="new-om"/>
+</target>
+
 <target name="sql" depends="configure">
 	<phing phingfile="build-propel.xml" target="sql"/>
 </target>
