Added comment about @DB@ placeholder in propel.database.url property.
git-svn-id: http://propel.mirror.svn.symfony-project.com/trunk@76 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/projects/bookstore/build.properties
+++ b/generator/projects/bookstore/build.properties
@@ -13,6 +13,13 @@
 propel.project = bookstore
 propel.database = sqlite
 propel.database.url = sqlite://localhost/./test/bookstore.db
+
+# Note that if you do not wish to specify the database (e.g. if you
+# are using multiple databses) you can use the @DB@ token which
+# will be replaced with a database at runtime. 
+# E.g.: propel.database.url = sqlite://localhost/./test/@DB@.db
+# This will work for the datadump and the insert-sql tasks.
+
 # propel.database.createUrl = (doesn't aply for SQLite, since db is auto-created)
 
 propel.targetPackage = bookstore
