Added build.property default values for propel.addVendorInfo, propel.addValidators and propel.packageObjectModel.
git-svn-id: http://propel.mirror.svn.symfony-project.com/trunk@79 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -24,6 +24,8 @@ propel.targetPackage = ${propel.project}
 propel.runOnlyOnSchemaChange = false
 propel.targetPlatform = php5
 
+propel.packageObjectModel = false
+
 # -------------------------------------------------------------------
 #
 #  D A T A B A S E   S E T T I N G S
@@ -41,7 +43,15 @@ propel.database.schema =
 propel.database.encoding = 
 propel.database.manualCreation = false
 
+# -------------------------------------------------------------------
+#
+#  C R E O L E  TO  X M L  S E T T I N G S
+#
+# -------------------------------------------------------------------
+
 propel.samePhpName = false
+propel.addVendorInfo = true
+propel.addValidators = none
 
 # -------------------------------------------------------------------
 #
