updating new-om phing task and default properties
git-svn-id: http://propel.mirror.svn.symfony-project.com/trunk@132 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -164,4 +164,16 @@ propel.sql.mapper.from = *.xml
 propel.sql.mapper.to = *.sql
 
 
+# -------------------------------------------------------------------
+#
+#  B U I L D E R    S E T T I N G S
+#
+# -------------------------------------------------------------------
 
+propel.builder.peer = propel.engine.builder.om.php5.PHP5ComplexPeerBuilder  
+propel.builder.object = propel.engine.builder.om.php5.PHP5ComplexObjectBuilder
+
+propel.builder.objectstub = propel.engine.builder.om.php5.PHP5ExtensionObjectBuilder 
+propel.builder.peerstub = propel.engine.builder.om.php5.PHP5ExtensionPeerBuilder
+
+propel.bulder.mapbuilder = propel.engine.builder.om.php5.PHP5MapBuilderBuilder 
