Fixed !DataModelBuilder::builderFactory() ;) (still untested) and modified prop names slightly for builder classes.  Also committing some untested changes to !PropelNewOMTask
git-svn-id: http://propel.mirror.svn.symfony-project.com/trunk@140 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -170,10 +170,10 @@ propel.sql.mapper.to = *.sql
 #
 # -------------------------------------------------------------------
 
-propel.builder.peer = propel.engine.builder.om.php5.PHP5ComplexPeerBuilder  
-propel.builder.object = propel.engine.builder.om.php5.PHP5ComplexObjectBuilder
+propel.builder.classes.peer = propel.engine.builder.om.php5.PHP5ComplexPeerBuilder  
+propel.builder.classes.object = propel.engine.builder.om.php5.PHP5ComplexObjectBuilder
 
-propel.builder.objectstub = propel.engine.builder.om.php5.PHP5ExtensionObjectBuilder 
-propel.builder.peerstub = propel.engine.builder.om.php5.PHP5ExtensionPeerBuilder
+propel.builder.classes.objectstub = propel.engine.builder.om.php5.PHP5ExtensionObjectBuilder 
+propel.builder.classes.peerstub = propel.engine.builder.om.php5.PHP5ExtensionPeerBuilder
 
-propel.bulder.mapbuilder = propel.engine.builder.om.php5.PHP5MapBuilderBuilder 
+propel.bulder.classes.mapbuilder = propel.engine.builder.om.php5.PHP5MapBuilderBuilder 
