forgot to commit this update with correct build properties for builder classes.
git-svn-id: http://propel.mirror.svn.symfony-project.com/trunk@143 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -170,10 +170,10 @@ propel.sql.mapper.to = *.sql
 #
 # -------------------------------------------------------------------
 
-propel.builder.classes.peer = propel.engine.builder.om.php5.PHP5ComplexPeerBuilder  
-propel.builder.classes.object = propel.engine.builder.om.php5.PHP5ComplexObjectBuilder
+propel.builder.peer.class = propel.engine.builder.om.php5.PHP5ComplexPeerBuilder  
+propel.builder.object.class = propel.engine.builder.om.php5.PHP5ComplexObjectBuilder
 
-propel.builder.classes.objectstub = propel.engine.builder.om.php5.PHP5ExtensionObjectBuilder 
-propel.builder.classes.peerstub = propel.engine.builder.om.php5.PHP5ExtensionPeerBuilder
+propel.builder.objectstub.class = propel.engine.builder.om.php5.PHP5ExtensionObjectBuilder 
+propel.builder.peerstub.class = propel.engine.builder.om.php5.PHP5ExtensionPeerBuilder
 
-propel.bulder.classes.mapbuilder = propel.engine.builder.om.php5.PHP5MapBuilderBuilder 
+propel.builder.mapbuilder.class = propel.engine.builder.om.php5.PHP5MapBuilderBuilder 
