OO templates pass bookstore-test.php and run-om-tests.php!  * Added new-build target to build-propel.xml and build.xml  * Fixed undefined class referenced in static post-peer code  * Replace $numColumns with NUM_COLUMNS (const), similarly with $numLazyLoadColumns
git-svn-id: http://propel.mirror.svn.symfony-project.com/trunk@145 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/build.xml
+++ b/generator/build.xml
@@ -54,6 +54,14 @@
  
 </target>
 
+<target name="new-build" depends="configure" 
+  description="The main target. Includes project-specific build.properties and calls the build-propel.xml script">	
+
+ <!--<property file="${project.dir}/build.properties"/>-->
+ <phing phingfile="./build-propel.xml" target="new-build"/>
+ 
+</target>
+
 
 <!-- 
  Convenience mappings to build-propel.xml main targets 
