Native MySQL InnoDB FKey constraints support. If you want to use InnoDB, but rely on the "old" behavior of Propel emulating the foreign keys for you, set the new propel.emulateForeignKeyConstraints to true (this works for all platforms, not only MySQL+InnoDB)
git-svn-id: http://propel.mirror.svn.symfony-project.com/trunk@152 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -66,6 +66,7 @@ propel.addTimeStamp = true
 propel.basePrefix = Base
 propel.complexObjectModel = true
 propel.saveException = PropelException
+propel.emulateForeignKeyConstraints = false
 
 propel.omtar.src.base = false
 propel.omtar.src.extension = false
