issue #7 cont.  * Added new OO templates for the stub multi-extend and inheritance classes.  * Fixed broken inheritance and generic mutator / accessors methods.
git-svn-id: http://propel.mirror.svn.symfony-project.com/trunk@157 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -177,4 +177,8 @@ propel.builder.object.class = propel.engine.builder.om.php5.PHP5ComplexObjectBui
 propel.builder.objectstub.class = propel.engine.builder.om.php5.PHP5ExtensionObjectBuilder 
 propel.builder.peerstub.class = propel.engine.builder.om.php5.PHP5ExtensionPeerBuilder
 
+propel.builder.objectmultiextend.class = propel.engine.builder.om.php5.PHP5MultiExtendObjectBuilder
+
 propel.builder.mapbuilder.class = propel.engine.builder.om.php5.PHP5MapBuilderBuilder 
+
+propel.builder.interface.class = propel.engine.builder.om.php5.PHP5InterfaceBuilder
