Closing issue #7.  * Added new OO tempaltes for the node/tree classes.  * Refactored !PropelNewOMTask
git-svn-id: http://propel.mirror.svn.symfony-project.com/trunk@161 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -173,7 +173,6 @@ propel.sql.mapper.to = *.sql
 
 propel.builder.peer.class = propel.engine.builder.om.php5.PHP5ComplexPeerBuilder  
 propel.builder.object.class = propel.engine.builder.om.php5.PHP5ComplexObjectBuilder
-
 propel.builder.objectstub.class = propel.engine.builder.om.php5.PHP5ExtensionObjectBuilder 
 propel.builder.peerstub.class = propel.engine.builder.om.php5.PHP5ExtensionPeerBuilder
 
@@ -182,3 +181,8 @@ propel.builder.objectmultiextend.class = propel.engine.builder.om.php5.PHP5Multi
 propel.builder.mapbuilder.class = propel.engine.builder.om.php5.PHP5MapBuilderBuilder 
 
 propel.builder.interface.class = propel.engine.builder.om.php5.PHP5InterfaceBuilder
+
+propel.builder.node.class = propel.engine.builder.om.php5.PHP5NodeBuilder
+propel.builder.nodepeer.class = propel.engine.builder.om.php5.PHP5NodePeerBuilder
+propel.builder.nodestub.class = propel.engine.builder.om.php5.PHP5ExtensionNodeBuilder
+propel.builder.nodepeerstub.class = propel.engine.builder.om.php5.PHP5ExtensionNodePeerBuilder
