Converted build scripts to use new-om task by default.
git-svn-id: http://propel.mirror.svn.symfony-project.com/trunk@177 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/build.xml
+++ b/generator/build.xml
@@ -54,11 +54,11 @@
  
 </target>
 
-<target name="new-build" depends="configure" 
+<target name="old-build" depends="configure" 
   description="The main target. Includes project-specific build.properties and calls the build-propel.xml script">	
 
  <!--<property file="${project.dir}/build.properties"/>-->
- <phing phingfile="./build-propel.xml" target="new-build"/>
+ <phing phingfile="./build-propel.xml" target="old-build"/>
  
 </target>
 
