--- a/generator/default.properties
+++ b/generator/default.properties
@@ -171,6 +171,7 @@ propel.sql.mapper.to = *.sql
 #
 # -------------------------------------------------------------------
 
+# Object Model builders
 propel.builder.peer.class = propel.engine.builder.om.php5.PHP5ComplexPeerBuilder  
 propel.builder.object.class = propel.engine.builder.om.php5.PHP5ComplexObjectBuilder
 propel.builder.objectstub.class = propel.engine.builder.om.php5.PHP5ExtensionObjectBuilder 
@@ -186,3 +187,7 @@ propel.builder.node.class = propel.engine.builder.om.php5.PHP5NodeBuilder
 propel.builder.nodepeer.class = propel.engine.builder.om.php5.PHP5NodePeerBuilder
 propel.builder.nodestub.class = propel.engine.builder.om.php5.PHP5ExtensionNodeBuilder
 propel.builder.nodepeerstub.class = propel.engine.builder.om.php5.PHP5ExtensionNodePeerBuilder
+
+# SQL builders
+
+propel.builder.ddl.class = propel.engine.builder.sql.${propel.database}.${propel.database}DDLBuilder
