Experimental support for standalone project directories even with the non-PEAR version. Usage:  * Copy build.xml-local to the project directory (which already contains schema.xml, build.properties and runtime-conf.xml) and rename it to build.xml  * Make sure propel.project is properly set in build.properties  * Make sure propel.home is set to the Generator root directory in build.properties (you may use relative paths!)  * Set propel.output.dir to a directory of your choice, for example "./build/", relative paths are allowed again (you have to do this, otherwise the build output will be in propel-generator/projects/yourproj/build again)  * Rock the party ("phing" is enough, but "phing -Dproject=blah" works, too, of course, as well as using targets etc) Kudos to Stephan Wentz for helping to make this possible.
git-svn-id: http://propel.mirror.svn.symfony-project.com/trunk@202 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -85,9 +85,10 @@ propel.omtar.deleteFiles = false
 # removed in Propel 1.2 and/or 2.0.
 #
 
-propel.template.conf = conf/Control.tpl
-propel.template.sql = sql/base/Control.tpl
-propel.template.sqlDbInit = sql/db-init/Control.tpl
+propel.template.conf = ${propel.home}/templates/conf/Control.tpl
+propel.template.sql = ${propel.home}/templates/sql/base/Control.tpl
+propel.template.sqlDbInit = ${propel.home}/templates/sql/db-init/Control.tpl
+
 
 # -------------------------------------------------------------------
 #
