Implemented Platform changes, as proposed in http://propel.tigris.org/servlets/ReadMsg?listName=dev&msgNo=882
git-svn-id: http://propel.mirror.svn.symfony-project.com/trunk@258 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -192,3 +192,7 @@ propel.builder.nodepeerstub.class = propel.engine.builder.om.php5.PHP5ExtensionN
 # SQL builders
 
 propel.builder.ddl.class = propel.engine.builder.sql.${propel.database}.${propel.database}DDLBuilder
+
+# Platform classes
+
+propel.platform.class = propel.engine.platform.${propel.database}Platform
