--- a/generator/default.properties
+++ b/generator/default.properties
@@ -192,6 +192,7 @@ propel.builder.nodepeerstub.class = propel.engine.builder.om.php5.PHP5ExtensionN
 # SQL builders
 
 propel.builder.ddl.class = propel.engine.builder.sql.${propel.database}.${propel.database}DDLBuilder
+propel.builder.datasql.class = propel.engine.builder.sql.${propel.database}.${propel.database}DataSQLBuilder
 
 # Platform classes
 
