Changed default 'sql' target to use new PropelSQLTask; added 'old-sql' for legacy support.
git-svn-id: http://propel.mirror.svn.symfony-project.com/trunk@278 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/build.xml
+++ b/generator/build.xml
@@ -117,8 +117,8 @@
 	<phing phingfile="build-propel.xml" target="sql"/>
 </target>
 
-<target name="new-sql" depends="configure">
-	<phing phingfile="build-propel.xml" target="new-sql"/>
+<target name="old-sql" depends="configure">
+	<phing phingfile="build-propel.xml" target="old-sql"/>
 </target>
 
 <target name="graphviz" depends="configure">
