Added new properties for format of dates/times to Propel generator framework.
git-svn-id: http://propel.mirror.svn.symfony-project.com/trunk@298 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -68,6 +68,15 @@ propel.complexObjectModel = true
 propel.saveException = PropelException
 propel.emulateForeignKeyConstraints = false
 
+# These are the default formats that will be used when fetching values
+# from temporal columns in Propel.  You can always specify these when
+# calling the methods directly, but for methods like getByName() 
+# it is nice to change the defaults.
+
+propel.defaultTimeStampFormat = Y-m-d H:i:s
+propel.defaultTimeFormat = %X
+propel.defaultDateFormat = %x
+
 propel.omtar.src.base = false
 propel.omtar.src.extension = false
 propel.omtar.bin.base = false
