--- a/generator/default.properties
+++ b/generator/default.properties
@@ -105,6 +105,8 @@ propel.template.sqlDbInit = ${propel.home}/templates/sql/db-init/Control.tpl
 #
 # -------------------------------------------------------------------
 
+propel.projects.dir = ${propel.home}/projects
+
 propel.output.dir = ${propel.home}/projects/${propel.project}/build
 propel.schema.dir = ${propel.home}/projects/${propel.project}
 propel.templatePath = ${propel.home}/templates
