--- a/generator/default.properties
+++ b/generator/default.properties
@@ -105,12 +105,12 @@ propel.template.sqlDbInit = ${propel.home}/templates/sql/db-init/Control.tpl
 #
 # -------------------------------------------------------------------
 
-propel.projects.dir = ${propel.home}/projects
+propel.project.dir = ${propel.home}/projects/${propel.project}
 
-propel.output.dir = ${propel.home}/projects/${propel.project}/build
-propel.schema.dir = ${propel.home}/projects/${propel.project}
+propel.output.dir = ${propel.project.dir}/build
+propel.schema.dir = ${propel.project.dir}
 propel.templatePath = ${propel.home}/templates
-propel.conf.dir = ${propel.home}/projects/${propel.project}
+propel.conf.dir = ${propel.project.dir}
 
 propel.doc.dir = ${propel.output.dir}/doc
 propel.php.dir = ${propel.output.dir}/classes
