Turn on generic mutators/accessors since unit tests use these.
git-svn-id: http://propel.mirror.svn.symfony-project.com/trunk@314 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/projects/bookstore/build.properties
+++ b/generator/projects/bookstore/build.properties
@@ -23,3 +23,7 @@ propel.database.url = sqlite://localhost/./test/bookstore.db
 # propel.database.createUrl = (doesn't aply for SQLite, since db is auto-created)
 
 propel.targetPackage = bookstore
+
+# The unit tests need to test this stuff
+propel.addGenericAccessors = true
+propel.addGenericMutators = true
