Changed DSN for SQLite
git-svn-id: http://propel.mirror.svn.symfony-project.com/trunk@326 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/projects/bookstore/build.properties
+++ b/generator/projects/bookstore/build.properties
@@ -12,7 +12,7 @@
 
 propel.project = bookstore
 propel.database = sqlite
-propel.database.url = sqlite://localhost/./test/bookstore.db
+propel.database.url = sqlite://./test/bookstore.db
 
 # Note that if you do not wish to specify the database (e.g. if you
 # are using multiple databses) you can use the @DB@ token which
