#194 and #195   * Move the XSD and XSLT (and DTD) files into new top-level resources/ dir.   * Add new default properties to enable/disable/configure XSD and XSLT operation   * Refactor !AbstractPropelDataModelTask and !XmlToAppData to have validation performed in Phing Task (!AbstractPropelDataModelTask) instead of the !XmlToAppData parser.
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.2@332 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -26,6 +26,8 @@ propel.targetPlatform = php5
 
 propel.packageObjectModel = false
 
+propel.schema.validate = true
+
 # -------------------------------------------------------------------
 #
 #  D A T A B A S E   S E T T I N G S
@@ -137,6 +139,8 @@ propel.default.schema.basename = schema
 # are named (some from build-propel.xml, but some from within templates)
 # propel.default.data.basename = ${propel.project}-data
 
+propel.schema.xsd.file = ${propel.home}/resources/xsd/database.xsd
+propel.schema.xsl.file = ${propel.home}/resources/xsl/database.xsl
 
 # -------------------------------------------------------------------
 #
