#195. Added support for specifying relative directories (requires Phing >= 2.2.0RC1)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.2@342 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/build.xml
+++ b/generator/build.xml
@@ -22,6 +22,7 @@
      property here.  If it wasn't set, then this will be bogus, but it will
      be overridden by the "set-project-dir" target. -->    
 <property name="propel.project.dir" value="${project.dir}"/>
+<resolvepath propertyName="propel.project.dir" file="${propel.project.dir}" dir="${application.startdir}"/>
 
 <!-- set a default target if none provided -->
 <property name="target" value="main"/>
@@ -57,8 +58,8 @@
 	<echo message="		${propel.project.dir}/build.properties"/>
 	<echo message=" "/>
 	<echo message="Project directory not specified or invalid. You must "/>
-	<echo message="specify the ABSOLUTE path to your project directory and "/>
-	<echo message="your project directory must contain your build.properties "/>
+	<echo message="specify the path to your project directory and your "/>
+	<echo message="project directory must contain your build.properties "/>
 	<echo message="and schema.xml files.                                "/>
 	<echo message=" "/>
 	<echo message="Usage: "/>
@@ -66,7 +67,7 @@
 	<echo message="$&gt; propel-gen /path/to/projectdir [target]"/>
 	<echo message=" "/>
 	<echo message="=========================================================="/>	
-	<fail message="No project directory specified (did you specify a relative path instead of absolute?)."/>
+	<fail message="No project directory specified."/>
 </target>
 
 <target name="check-project-set" unless="projectOrDirSet" depends="check-project-or-dir-set">
