Fixes #218   * Adds new propel.disableIdentifierQuoting property (defaults to FALSE, i.e. quoting still enabled by default)   * Refactored the Builder classes to use a new DDLBuilder->quoteIdentifier() method that wraps the Platform->quoteIdentifier() method and checks the status of propel.disableIdentifierQuoting property.   * Refactored the Builder classes to no longer use any SQL DDL created by the model classes (this meant replacing methods like Column::makeList() and Column->getSqlString()).   * Added a [temporary] warning to the build-propel.xml script to warn PostgreSQL users that they should probably disable identifier quoting, unless they know what they're doing.
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.2@351 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -1,25 +1,25 @@
 # -------------------------------------------------------------------
-# 
+#
 #  D E F A U L T   P R O P E R T I E S
-# 
+#
 # -------------------------------------------------------------------
 # This file sets default properties.  You can override any of these
 # by specifying your new value in the build.properties file for your
-# project or a top-level build.properties file. Either way, you 
+# project or a top-level build.properties file. Either way, you
 # should not need to edit this file.
 # -------------------------------------------------------------------
 
 
 # -------------------------------------------------------------------
-# 
+#
 #  B A S I C   P R O P E R T I E S
-# 
+#
 # -------------------------------------------------------------------
 
 propel.home = .
 
-propel.project = 
-propel.database = 
+propel.project =
+propel.database =
 propel.targetPackage = ${propel.project}
 propel.runOnlyOnSchemaChange = false
 propel.targetPlatform = php5
@@ -34,15 +34,15 @@ propel.schema.validate = true
 #
 # -------------------------------------------------------------------
 
-propel.database.url = 
+propel.database.url =
 propel.database.buildUrl = ${propel.database.url}
 propel.database.createUrl = ${propel.database.buildUrl}
 
 # by default leave the databaseDriver blank, so that bundled driver is used by Creole
-propel.database.driver = 
+propel.database.driver =
 
-propel.database.schema = 
-propel.database.encoding = 
+propel.database.schema =
+propel.database.encoding =
 propel.database.manualCreation = false
 
 # -------------------------------------------------------------------
@@ -70,9 +70,14 @@ propel.complexObjectModel = true
 propel.saveException = PropelException
 propel.emulateForeignKeyConstraints = false
 
+# Identifier quoting is only implemented at the DDL layer at this point.
+# Since this may result in undesired behavior (especially in Postgres),
+# it can be disabled by setting this property to true in your build.properties file.
+propel.disableIdentifierQuoting = false
+
 # These are the default formats that will be used when fetching values
 # from temporal columns in Propel.  You can always specify these when
-# calling the methods directly, but for methods like getByName() 
+# calling the methods directly, but for methods like getByName()
 # it is nice to change the defaults.
 
 propel.defaultTimeStampFormat = Y-m-d H:i:s
@@ -188,14 +193,14 @@ propel.sql.mapper.to = *.sql
 # -------------------------------------------------------------------
 
 # Object Model builders
-propel.builder.peer.class = propel.engine.builder.om.php5.PHP5ComplexPeerBuilder  
+propel.builder.peer.class = propel.engine.builder.om.php5.PHP5ComplexPeerBuilder
 propel.builder.object.class = propel.engine.builder.om.php5.PHP5ComplexObjectBuilder
-propel.builder.objectstub.class = propel.engine.builder.om.php5.PHP5ExtensionObjectBuilder 
+propel.builder.objectstub.class = propel.engine.builder.om.php5.PHP5ExtensionObjectBuilder
 propel.builder.peerstub.class = propel.engine.builder.om.php5.PHP5ExtensionPeerBuilder
 
 propel.builder.objectmultiextend.class = propel.engine.builder.om.php5.PHP5MultiExtendObjectBuilder
 
-propel.builder.mapbuilder.class = propel.engine.builder.om.php5.PHP5MapBuilderBuilder 
+propel.builder.mapbuilder.class = propel.engine.builder.om.php5.PHP5MapBuilderBuilder
 
 propel.builder.interface.class = propel.engine.builder.om.php5.PHP5InterfaceBuilder
 
