--- a/generator/default.properties
+++ b/generator/default.properties
@@ -66,6 +66,7 @@ propel.addGenericMutators = false
 propel.addSaveMethod = true
 propel.addTimeStamp = true
 propel.basePrefix = Base
+propel.criteriaClass = Criteria
 propel.complexObjectModel = true
 propel.saveException = PropelException
 propel.emulateForeignKeyConstraints = false
